# crnn.pytorch.tensorrt.chinese

./: .gitignore  README.md  gen_wts.py  inference.py  inference_trt.py  test.py  train.py
crnn_trt/: .crnn.cpp.swp  CMakeLists.txt  crnn.cpp  crnn_number.cpp  utils.h
images/test_cn/: test.txt
lib/config/: 360CC_config.yaml  alphabet_15.list  cn_config.yaml  number_config.yaml
lib/core/: function.py
lib/dataset/: _360cc.py  __init__.py  _w_pad.py
lib/models/: crnn.py
lib/utils/: tools.py  txt_processor.py  utils.py
